# n-queens-algorithm-in-cpp

./: .gitignore  CMakeLists.txt  eight-queens-algorithm.cpp  eight-queens-algorithm.h  n-queens-algorithm.cpp  n-queens-algorithm.h
